Fix style conflict issue and trigger visibleChange event.

--- a/assets/skins/miiicasa/module.scss
+++ b/assets/skins/miiicasa/module.scss
@@ -11,7 +11,7 @@
         background: #000;
         @include opacity(0.6);
     }
-    .yui3-panel {
+    .yui3-module-dialog {
         background: #fff;
         border: solid 1px #ccc;
         width: 410px;
